fix: moving bottom border to :after psuedo element to align to page margin

--- a/components/02-molecules/banner/action/_yds-action-banner.scss
+++ b/components/02-molecules/banner/action/_yds-action-banner.scss
@@ -109,7 +109,15 @@ $break-cta-banner-max: $break-cta-banner - 0.05;
 
   &[data-component-theme='white'] {
     @media (max-width: $break-cta-banner-max) {
-      border-bottom: var(--size-thickness-1) solid var(--color-gray-200);
+      &::after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: var(--size-spacing-site-gutter);
+        right: var(--size-spacing-site-gutter);
+        height: var(--border-thickness-1);
+        background-color: var(--color-gray-200);
+      }
     }
   }
 }
